// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Produk Page renders data correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container mx-auto p-4"
      >
        <div
          class="produk"
        >
          <h1
            class="produk__title"
            data-testid="title"
          >
            Daftar Produk
          </h1>
          <div
            class="produk__content"
          >
            <a
              class="produk__content__item"
              href="/produk/1"
            >
              <div
                class="produk__content__item"
              >
                <img
                  alt="Lemper"
                  class="produk__content__item__image"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
                <h2
                  class="produk__content__item__name"
                >
                  Nama: 
                  Lemper
                </h2>
                <p
                  class="produk__content__item__price"
                >
                  Harga: Rp. 
                  5.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Kategori: 
                  Panganan
                </p>
              </div>
            </a>
            <a
              class="produk__content__item"
              href="/produk/2"
            >
              <div
                class="produk__content__item"
              >
                <img
                  alt="Gethuk"
                  class="produk__content__item__image"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
                <h2
                  class="produk__content__item__name"
                >
                  Nama: 
                  Gethuk
                </h2>
                <p
                  class="produk__content__item__price"
                >
                  Harga: Rp. 
                  3.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Kategori: 
                  Panganan
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container mx-auto p-4"
    >
      <div
        class="produk"
      >
        <h1
          class="produk__title"
          data-testid="title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
        >
          <a
            class="produk__content__item"
            href="/produk/1"
          >
            <div
              class="produk__content__item"
            >
              <img
                alt="Lemper"
                class="produk__content__item__image"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Flemper.jpg&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
              <h2
                class="produk__content__item__name"
              >
                Nama: 
                Lemper
              </h2>
              <p
                class="produk__content__item__price"
              >
                Harga: Rp. 
                5.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Kategori: 
                Panganan
              </p>
            </div>
          </a>
          <a
            class="produk__content__item"
            href="/produk/2"
          >
            <div
              class="produk__content__item"
            >
              <img
                alt="Gethuk"
                class="produk__content__item__image"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fgethuk.jpg&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
              <h2
                class="produk__content__item__name"
              >
                Nama: 
                Gethuk
              </h2>
              <p
                class="produk__content__item__price"
              >
                Harga: Rp. 
                3.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Kategori: 
                Panganan
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Produk Page renders loading state correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container mx-auto p-4"
      >
        <div
          class="produk"
        >
          <h1
            class="produk__title"
            data-testid="title"
          >
            Daftar Produk
          </h1>
          <div
            class="produk__content"
          >
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__category"
              />
              <div
                class="produk__content__skeleton__price"
              />
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__category"
              />
              <div
                class="produk__content__skeleton__price"
              />
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__category"
              />
              <div
                class="produk__content__skeleton__price"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container mx-auto p-4"
    >
      <div
        class="produk"
      >
        <h1
          class="produk__title"
          data-testid="title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
        >
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__name"
            />
            <div
              class="produk__content__skeleton__category"
            />
            <div
              class="produk__content__skeleton__price"
            />
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__name"
            />
            <div
              class="produk__content__skeleton__category"
            />
            <div
              class="produk__content__skeleton__price"
            />
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__name"
            />
            <div
              class="produk__content__skeleton__category"
            />
            <div
              class="produk__content__skeleton__price"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
